{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 166,
  "lineage": "ae18f61f-5091-42b1-6671-b0723ae7ab9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067e2c26aa7d1d702",
            "arn": "arn:aws:ec2:us-east-1:275573050667:elastic-ip/eipalloc-067e2c26aa7d1d702",
            "association_id": "eipassoc-02d39f0197541dfd6",
            "domain": "vpc",
            "id": "eipalloc-067e2c26aa7d1d702",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02f4dbfa4b3141972",
            "private_dns": "ip-10-42-0-63.ec2.internal",
            "private_ip": "10.42.0.63",
            "public_dns": "ec2-44-220-118-190.compute-1.amazonaws.com",
            "public_ip": "44.220.118.190",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-nat",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "eipalloc-067e2c26aa7d1d702",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:internet-gateway/igw-06f9f6606c7580141",
            "id": "igw-06f9f6606c7580141",
            "owner_id": "275573050667",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-igw",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "igw-06f9f6606c7580141",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067e2c26aa7d1d702",
            "association_id": "eipassoc-02d39f0197541dfd6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-00f2d63ce4ed49aac",
            "network_interface_id": "eni-02f4dbfa4b3141972",
            "private_ip": "10.42.0.63",
            "public_ip": "44.220.118.190",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9571a5382e4d3aa",
            "tags": {
              "Name": "sse-poc-eks-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-nat",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "nat-00f2d63ce4ed49aac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:route-table/rtb-0fbb3288a0d46a80c",
            "id": "rtb-0fbb3288a0d46a80c",
            "owner_id": "275573050667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f2d63ce4ed49aac",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sse-poc-eks-private-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-private-rt",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            },
            "timeouts": null,
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtb-0fbb3288a0d46a80c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:route-table/rtb-0303b0cd7709e5a7e",
            "id": "rtb-0303b0cd7709e5a7e",
            "owner_id": "275573050667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f9f6606c7580141",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sse-poc-eks-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-public-rt",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            },
            "timeouts": null,
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtb-0303b0cd7709e5a7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0138c3d55fb62618e",
            "region": "us-east-1",
            "route_table_id": "rtb-0fbb3288a0d46a80c",
            "subnet_id": "subnet-024e17ca383ce949b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtbassoc-0138c3d55fb62618e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd1212f8c5ff565",
            "region": "us-east-1",
            "route_table_id": "rtb-0fbb3288a0d46a80c",
            "subnet_id": "subnet-043ad3c9ef97e18f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtbassoc-0ddd1212f8c5ff565",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8fdd68da099822f",
            "region": "us-east-1",
            "route_table_id": "rtb-0303b0cd7709e5a7e",
            "subnet_id": "subnet-0d9571a5382e4d3aa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtbassoc-0c8fdd68da099822f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c8b7036aec5333",
            "region": "us-east-1",
            "route_table_id": "rtb-0303b0cd7709e5a7e",
            "subnet_id": "subnet-0089290a89535d951"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "rtbassoc-040c8b7036aec5333",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:subnet/subnet-024e17ca383ce949b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024e17ca383ce949b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275573050667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-private-1",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-private-1",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "subnet-024e17ca383ce949b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:subnet/subnet-043ad3c9ef97e18f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043ad3c9ef97e18f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275573050667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-private-2",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-private-2",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "subnet-043ad3c9ef97e18f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:subnet/subnet-0d9571a5382e4d3aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9571a5382e4d3aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "275573050667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-public-1",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-public-1",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "subnet-0d9571a5382e4d3aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:subnet/subnet-0089290a89535d951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0089290a89535d951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "275573050667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-public-2",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-public-2",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario",
              "kubernetes.io/cluster/sse-poc-eks-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009dfcee4cdf391f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "subnet-0089290a89535d951",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275573050667:vpc/vpc-009dfcee4cdf391f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-075794af5baffe3d4",
            "default_route_table_id": "rtb-0fc49b42a05572469",
            "default_security_group_id": "sg-056b739587291d97e",
            "dhcp_options_id": "dopt-0ce0f86776fbe2689",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009dfcee4cdf391f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc49b42a05572469",
            "owner_id": "275573050667",
            "region": "us-east-1",
            "tags": {
              "Name": "sse-poc-eks-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sse-poc-eks-vpc",
              "Project": "sse-poc-eks",
              "Purpose": "poc-temporario"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "275573050667",
            "id": "vpc-009dfcee4cdf391f8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sse-poc",
            "metadata": [
              {
                "generation": 0,
                "name": "sse-poc",
                "resource_version": "1511",
                "uid": "f22b05be-da27-424f-a43f-c0639885a0f2"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "sse-poc"
          },
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_eks_fargate_profile.application",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.fargate_pod_execution",
            "aws_iam_role_policy_attachment.eks_cluster",
            "aws_iam_role_policy_attachment.fargate_pod_execution",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_cluster_assume",
            "data.aws_iam_policy_document.fargate_pod_execution_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aws-observability",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "aws-observability": "enabled"
                },
                "name": "aws-observability",
                "resource_version": "1005",
                "uid": "783fe02e-59e2-45cf-b6f5-fed3a72aeccb"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "aws-observability"
          },
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_cluster_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sse-poc/sse-poc-eks-app",
            "metadata": [
              {
                "generation": 0,
                "name": "sse-poc-eks-app",
                "namespace": "sse-poc",
                "resource_version": "1518",
                "uid": "1bbc1a88-f35d-4542-97ec-528213ed594b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.7.57",
                "cluster_ips": [
                  "172.20.7.57"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "sse-poc-eks-app"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "sse-poc-eks-app",
            "namespace": "sse-poc"
          },
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_eks_fargate_profile.application",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.fargate_pod_execution",
            "aws_iam_role_policy_attachment.eks_cluster",
            "aws_iam_role_policy_attachment.fargate_pod_execution",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.eks_cluster_assume",
            "data.aws_iam_policy_document.fargate_pod_execution_assume",
            "kubernetes_namespace_v1.application"
          ]
        }
      ]
    }
  ]
}